# DeepLearning

./: .gitignore  Makefile  README.md  datasets.py  main.ipynb  main.py  modern_neural_network.py  neural_network.py  pyproject.toml  requirements.txt
computer_vision/: faster_rcnn.ipynb
cs231n/: README.md
cs231n/assignment1/: collect_submission.ipynb  features.ipynb  knn.ipynb  softmax.ipynb  svm.ipynb  two_layer_net.ipynb
cs231n/assignment1/cs231n/: data_utils.py  solver.py
cs231n/assignment2/: Dropout.ipynb  PyTorch.ipynb  TensorFlow.ipynb
cs231n/assignment2/cs231n/: fast_layers.py  im2col_cython.pyx  layer_utils.py  layers.py  optim.py  solver.py
cs231n/assignment3/cs231n/: gan_pytorch.py  net_visualization_pytorch.py
image_processing/: feature_detection.ipynb  image_filters.ipynb  object_detection.ipynb  transformation.ipynb
keras/: functional_subclassing.ipynb  transfer_learning.ipynb
keras/histories/: transfer_learning  transfer_learning_binary
keras/models/: transfer_learning.keras  transfer_learning_binary.keras
notebooks/: welcoming.ipynb
notebooks/MobileNets/: MobileNetV1.ipynb  MobileNetV2.ipynb  MobileNetV3.ipynb
notebooks/R-CNN/: Faster-CNN.ipynb  R-CNN.ipynb
notebooks/ResNets/: ResNets.ipynb
notebooks/foundations/: datasets.ipynb  welcoming.ipynb
practices/: CIFAR100.ipynb  MNIST.ipynb
src/benchmark/: main.py
src/dl/: main.py
src/inference/: __init__.py
src/nn/: activation.py  common.py  early_stopping.py  layer.py  loss.py  model.py  neural.py  optimizer.py  regularization.py
src/nn/pure/: neural_network_v2.py
src/scratch/: modern_neural_network.py  neural_network.py  run.py
src/training/: __init__.py
tests/: test_load_datasets.py  test_neural_network_v1.py  test_neural_network_v2.py  test_neural_network_v3.py
torch/: MobileNet-v1.ipynb  ResNet.ipynb  basic.ipynb  classifications.ipynb  tensor.ipynb
(+6 files in other folders)
