[project]
name = "dl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Hinsun", email = "vanhoai.adv@gmail.com" }]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
dl = "dl.main:main"
benchmark = "benchmark.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    "packages/core",
    "packages/nn",
]
