[project]
name = "dl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Hinsun", email = "vanhoai.adv@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "hatchling>=1.27.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "opencv-python>=4.11.0.86",
    "torch>=2.7.1",
    "torchinfo>=1.8.0",
    "torchsummary>=1.5.1",
    "torchvision>=0.22.1",
]

[project.scripts]
dl = "dl.main:main"
benchmark = "benchmark.main:main"
training = "training:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    "packages/core",
    "packages/nn",
    "packages/backend",
    "packages/models",
    "packages/cnn",
]
